--- a/_config.yml
+++ b/_config.yml
@@ -31,8 +31,10 @@ github_username:  jekyll
 markdown: kramdown
 
 # Build settings
-theme: hacker
+theme: minima
+remote_theme: pages-themes/architect@v0.2.0
 plugins:
+  - jekyll-remote-theme
   - jekyll-feed
 
 # Exclude from processing.
