--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ github_username:  jekyll
 markdown: kramdown
 
 # Build settings
+theme: minima
 remote_theme: pages-themes/architect@v0.2.0
 plugins:
   - jekyll-remote-theme
