--- a/_config.yml
+++ b/_config.yml
@@ -28,10 +28,9 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
+markdown: kramdown
 
 # Build settings
-theme: minima
-remote_theme: pages-themes/architect@v0.2.0
 plugins:
   - jekyll-remote-theme
   - jekyll-feed
