--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ github_username:  jekyll
 markdown: kramdown
 
 # Build settings
+theme: minima
 plugins:
   - jekyll-remote-theme
   - jekyll-feed
