--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ markdown: kramdown
 
 # Build settings
 theme: minima
+remote_theme: pages-themes/hacker@v0.2.0
 plugins:
   - jekyll-remote-theme
   - jekyll-feed
